0.02
 - Fix LICENSE file.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.01 2014-06-05T18:18:25+02:00
 - First version.