@@ -2,6 +2,8 @@ Changes
 CSV.pm
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -19,9 +21,9 @@ SIGNATURE
 t/data/ex1.tgf
 t/data/ex2.tgf
 t/data/ex3.tgf
-t/Graph-Reader-TGF-CSV/00-use.t
-t/Graph-Reader-TGF-CSV/01-version.t
-t/Graph-Reader-TGF-CSV/02-pod_coverage.t
-t/Graph-Reader-TGF-CSV/03-pod.t
-t/Graph-Reader-TGF-CSV/04-new.t
-t/Graph-Reader-TGF-CSV/05-read_graph.t
+t/Graph-Reader-TGF-CSV/01-use.t
+t/Graph-Reader-TGF-CSV/02-version.t
+t/Graph-Reader-TGF-CSV/03-new.t
+t/Graph-Reader-TGF-CSV/04-read_graph.t
+xt/Graph-Reader-TGF-CSV/01-pod_coverage.t
+xt/Graph-Reader-TGF-CSV/02-pod.t
