@@ -9,8 +9,6 @@ build_requires:
   File::Object: 0.07
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +24,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Error::Pure: 0.16
   Graph::Reader::TGF: 0.01
